# stats

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/: example1.cpp
include/xstd/: statistics.hpp  stats.hpp
stats/test/: CMakeLists.txt
stats/test/src/: assert_equal.hpp  harmonic_mean.cpp  mean.cpp
test/: CMakeLists.txt
test/src/: assert_equal.hpp  geometric_mean.cpp  harmonic_mean.cpp  mean.cpp  standard_deviation.cpp  variance.cpp
